Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,22 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['City', 'Country', 'Population', 'Area'])"
+       "dict_values(['Toronto', 'Canada', 2732, 630])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[1].keys()"
+    "cities[1].values()"
    ]
   },
   {
